{
    "name": "MonsterControls",
    "maps": [
        {
            "name": "LandControls",
            "id": "5717bc37-6a23-4b99-a24d-e7c5918075c1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "459dfc48-911b-416e-9def-153de5a83dff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PsyWall",
                    "type": "Button",
                    "id": "7410f5bb-c0a5-420f-8746-ec893ed1e43a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FakeMan",
                    "type": "Button",
                    "id": "e06c040a-735c-4bed-8d29-2dd629cf6270",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "735aee5f-bb3c-4958-8d97-b7333a62e0ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f1edc3aa-5c07-414c-8d61-e21a0aee9aad",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "211292bd-fb60-4740-9fec-3bd624f17ea2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2bf3f99f-2b05-4f0a-ae8d-8acb3a125ae1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0a3d11c1-1f5c-43c3-940c-8fa2cdc85ff4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dca66096-7997-4a84-9033-96c5aa54cc69",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "44d5d9be-f6ef-412c-8bad-5aafc649b1a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PsyWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5283910-ed32-4f41-88c4-200091935ddd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FakeMan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca0f4084-6d43-4ed4-b949-f20dbeadfcc1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}